fix: items alignment

--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,10 @@ body {
 
 .container {
     background-color: gray;
-    width: 20%;
+    width: 90%;
+    max-width: 320px;
     padding: 2%;
+    box-sizing: border-box;
 
     margin-left: auto;
     margin-right: auto;
@@ -22,10 +24,16 @@ body {
     align-items: center;
 }
 
+#sprite {
+    display: block;
+    margin: 0 auto;
+}
+
 section {
     display: inline-block;
     width: 100%;
-    margin: 5%;
+    margin: 5% 0;
+    box-sizing: border-box;
 }
 
 p {
